--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -1,47 +1,65 @@
 name: PestUnitTests
 on:
-  workflow_call:
-    inputs:
-      phpVersion:
-        type: string
-        description: 'PHP Version'
-        required: false
-        default: '8.2'
-      branch:
-        type: string
-        description: 'The branch to analize'
-        required: false
-        default: 'main'
-      enforceCoverage:
-        type: boolean
-        description: 'Should the coverage requirement be enforced?'
-        required: false
-        default: true
+    workflow_call:
+        inputs:
+            phpVersion:
+                type: string
+                description: 'PHP Version'
+                required: false
+                default: '8.2'
+            branch:
+                type: string
+                description: 'The branch to analize'
+                required: false
+                default: 'main'
+            enforceCoverage:
+                type: boolean
+                description: 'Should the coverage requirement be enforced?'
+                required: false
+                default: true
+            minCodeCoverage:
+                type: number
+                description: 'Minimum code coverage percentage'
+                required: false
+                default: 80
+            runParallel:
+                type: boolean
+                description: 'Run Pest in Parallel'
+                required: false
+                default: false
 
 jobs:
-  RunPest:
-    runs-on: ubuntu-latest
+    RunPest:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.branch }}
+        steps:
+            -   name: Checkout
+                uses: actions/checkout@v4
+                with:
+                    ref: ${{ inputs.branch }}
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ inputs.phpVersion }}
-          tools: composer:v2
-          coverage: xdebug
+            -   name: Setup PHP
+                uses: shivammathur/setup-php@v2
+                with:
+                    php-version: ${{ inputs.phpVersion }}
+                    tools: composer:v2
+                    coverage: xdebug
 
-      - name: Install Dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+            -   name: Install Dependencies
+                run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
-      - name: Run Pest Tests (with Coverage)
-        if: ${{ inputs.enforceCoverage }}
-        run: ./vendor/bin/pest --coverage --min=80
+            -   name: Run Pest Tests (with Coverage)
+                if: ${{ inputs.enforceCoverage && !inputs.runParallel }}
+                run: ./vendor/bin/pest --coverage --min=${{inputs.minCodeCoverage}}
 
-      - name: Run Pest Tests (without Coverage)
-        if: ${{ !inputs.enforceCoverage }}
-        run: ./vendor/bin/pest
+            -   name: Run Pest Tests (without Coverage)
+                if: ${{ !inputs.enforceCoverage && !inputs.runParallel }}
+                run: ./vendor/bin/pest
+
+            -   name: Run Parallel Pest Tests (with Coverage)
+                if: ${{ inputs.enforceCoverage && inputs.runParallel }}
+                run: ./vendor/bin/pest --coverage --min=${{inputs.minCodeCoverage}}
+
+            -   name: Run Parallel Pest Tests (without Coverage)
+                if: ${{ !inputs.enforceCoverage && inputs.runParallel }}
+                run: ./vendor/bin/pest
