--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -1,39 +1,37 @@
 name: "0_Local: Create Release"
 
 on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-      - '!v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+'
-      - '!v[0-9]'
-  workflow_dispatch:
+    push:
+        tags:
+            - 'v[0-9]+.[0-9]+.[0-9]+'
+            - '!v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+'
+            - '!v[0-9]'
+    workflow_dispatch:
 
 permissions:
-  pull-requests: write
-  contents: write
+    pull-requests: write
+    contents: write
 
 jobs:
-  CreateRelease:
-    name: Create Release
-    uses: ./.github/workflows/createRelease.yml
-    with:
-      generateReleaseNotes: true
-      isDraft: false
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
+    CreateRelease:
+        name: Create Release
+        uses: ./.github/workflows/createRelease.yml
+        with:
+            generateReleaseNotes: true
+            isDraft: false
+        secrets:
+            token: ${{ secrets.GITHUB_TOKEN }}
 
-  PrepareTags:
-    name: PrepareTags
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: ReplaceMajorTag
-        id: replaceMajorTag
-        run: |
-          git fetch --tags
-          git tag -d v1
-          git push origin --delete v1
-          git tag v1 ${{github.ref}}
-          git push origin v1
+    PrepareTags:
+        name: PrepareTags
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Checkout
+                uses: actions/checkout@v4
+                run: |
+                    git fetch --tags
+                    major_version=$(echo "${GITHUB_REF#refs/tags/}" | grep -oP '^v\K[0-9]+')
+                    git tag -d v$major_version
+                    git push origin --delete v$major_version
+                    git tag v$major_version ${{github.ref}}
+                    git push origin v$major_version
