--- a/.github/workflows/dusterFixBlame.yml
+++ b/.github/workflows/dusterFixBlame.yml
@@ -39,3 +39,7 @@ jobs:
                     commit_message: Ignore Dusting commit in git blame
                     commit_user_name: EncoreBot
                     commit_user_email: ghbot@encoredigitalgroup.com
+
+            -   name: Upgrade to v2.0
+                id: upgradeMessage
+                run: echo "Version 2.0 has been released. Time to upgrade"
