--- a/.github/workflows/formatPullRequestTitle.yml
+++ b/.github/workflows/formatPullRequestTitle.yml
@@ -24,6 +24,10 @@ jobs:
             -   name: Checkout Code
                 uses: actions/checkout@v4
 
+            -   name: Upgrade to v2.0
+                id: upgradeMessage
+                run: echo "Version 2.0 has been released. Time to upgrade"
+
             -   name: Format Pull Request Title
                 env:
                     GH_TOKEN: ${{ secrets.token }}
