--- a/.github/workflows/php_gitStatusCheck.yml
+++ b/.github/workflows/php_gitStatusCheck.yml
@@ -21,6 +21,10 @@ jobs:
             -   name: Checkout Repository
                 uses: actions/checkout@v4
 
+            -   name: Upgrade to v2.0
+                id: upgradeMessage
+                run: echo "Version 2.0 has been released. Time to upgrade"
+
             -   name: Check Git Status
                 id: checkStatus
                 shell: bash
