--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -30,8 +30,7 @@ jobs:
                 id: replaceMajorTag
                 run: |
                     git fetch --tags
-                    major_version=$(echo "${GITHUB_REF#refs/tags/}" | grep -oP '^v\K[0-9]+')
-                    git tag -d v$major_version
-                    git push origin --delete v$major_version
-                    git tag v$major_version ${{github.ref}}
-                    git push origin v$major_version
+                    git tag -d v2
+                    git push origin --delete v2
+                    git tag v1 ${{github.ref}}
+                    git push origin v2
