--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -26,11 +26,15 @@ jobs:
         name: PrepareTags
         runs-on: ubuntu-latest
         steps:
+            -   name: Checkout
+                uses: actions/checkout@v4
+
             -   name: ReplaceMajorTag
                 id: replaceMajorTag
                 run: |
                     git fetch --tags
-                    git tag -d v2
-                    git push origin --delete v2
-                    git tag v1 ${{github.ref}}
-                    git push origin v2
+                    major_version=$(echo "${GITHUB_REF#refs/tags/}" | grep -oP '^v\K[0-9]+')
+                    git tag -d v$major_version
+                    git push origin --delete v$major_version
+                    git tag v$major_version ${{github.ref}}
+                    git push origin v$major_version
