--- a/actions/php/gitStatusCheck/action.yml
+++ b/actions/php/gitStatusCheck/action.yml
@@ -8,7 +8,7 @@ inputs:
 outputs:
     shouldRun:
         description: 'Whether specified files were modified'
-        value: ${{ jobs.GitStatusCheck.outputs.shouldRun }}
+        value: ${{ steps.CheckWorkflowCriteria.outputs.shouldRun }}
 runs:
     using: 'composite'
     steps:
@@ -20,6 +20,7 @@ runs:
             run: chmod +x ${{github.action_path}}/entrypoint.sh
 
         -   name: Check Workflow Criteria
+            id: CheckWorkflowCriteria
             shell: bash
             run: ${{github.action_path}}/entrypoint.sh
             env:
