--- a/actions/github/formatPullRequestTitle/action.yml
+++ b/actions/github/formatPullRequestTitle/action.yml
@@ -13,6 +13,11 @@ inputs:
         description: 'The branch name'
         required: true
         type: string
+    useSemanticCommits:
+        description: "Enable semantic commit schema for PR"
+        required: false
+        type: boolean
+        default: false
     token:
         description: 'GitHub token'
         required: true
@@ -34,3 +39,4 @@ runs:
                 GH_REPOSITORY: ${{ inputs.repository }}
                 PR_NUMBER: ${{ inputs.pullRequestNumber }}
                 BRANCH_NAME: ${{ inputs.branch }}
+                USE_SEMANTIC_COMMITS: ${{ inputs.useSemanticCommits }}
