--- a/actions/github/formatPullRequestTitle/action.yml
+++ b/actions/github/formatPullRequestTitle/action.yml
@@ -28,7 +28,9 @@ runs:
             if: ${{ inputs.useGo }}
             uses: actions/setup-go@v5
             with:
-                go-version: '>=1.24.0'
+                go-version: "${{ github.action_path }}/go.mod"
+                cache-dependency-path: "${{ github.action_path }}/go.sum"
+
 
         -   name: "Format Pull Request Title (Go) [WARNING: This is an experimental feature]"
             if: ${{ inputs.useGo }}
