--- a/actions/github/formatPullRequestTitle/action.yml
+++ b/actions/github/formatPullRequestTitle/action.yml
@@ -30,8 +30,8 @@ runs:
             with:
                 go-version: '>=1.24.1'
                 go-version-file: '${{github.action_path}}/go.mod'
-            env:
-                GOMOD: "${{github.action_path}}/go.mod"
+                cache: true
+                cache-dependency-path: '${{github.action_path}}/go.sum'
 
         -   name: "Format Pull Request Title (Go) [WARNING: This is an experimental feature]"
             if: ${{ inputs.useGo }}
@@ -43,7 +43,6 @@ runs:
                 GH_REPOSITORY: ${{ inputs.repository }}
                 PR_NUMBER: ${{ inputs.pullRequestNumber }}
                 BRANCH_NAME: ${{ inputs.branch }}
-                GOMOD: "${{ github.action_path }}/go.mod"
 
         -   name: Set execute permissions
             if: ${{ !inputs.useGo }}
