--- a/actions/github/formatPullRequestTitle/action.yml
+++ b/actions/github/formatPullRequestTitle/action.yml
@@ -17,9 +17,9 @@ inputs:
         description: 'GitHub token'
         required: true
     useGo:
-        description: 'Use the Go version of the action. Default is false'
+        description: 'Use the Go version of the action. Default is false [NOTICE: This option will be removed in the next major version.]'
         required: false
-        default: "false"
+        default: false
         type: boolean
 runs:
     using: 'composite'
@@ -33,23 +33,46 @@ runs:
                 cache: true
                 cache-dependency-path: '${{github.action_path}}/go.sum'
 
-        -   name: "Format Pull Request Title (Go) [WARNING: This is an experimental feature]"
+        -   name: Restore Go Modules Cache
+            if: ${{ inputs.useGo }}
+            uses: actions/cache@v4
+            id: go-cache
+            with:
+                path: ~/go/pkg/mod
+                key: ${{ runner.os }}-go-modules-${{ hashFiles('**/go.sum') }}
+                restore-keys: |
+                    ${{ runner.os }}-go-modules-
+
+        -   name: Tidy Go Modules
             if: ${{ inputs.useGo }}
             shell: bash
             working-directory: ${{github.action_path}}
-            run: go mod tidy && go run ${{github.action_path}}/main.go
+            run: go mod tidy
+
+        -   name: Save Go Modules Cache
+            if: ${{ inputs.useGo && steps.go-cache.outputs.cache-hit != 'true' }}
+            uses: actions/cache@v4
+            with:
+                path: ~/go/pkg/mod
+                key: ${{ runner.os }}-go-modules-${{ hashFiles('**/go.sum') }}
+
+        -   name: "Format Pull Request Title"
+            if: ${{ inputs.useGo }}
+            shell: bash
+            working-directory: ${{github.action_path}}
+            run: go run main.go
             env:
                 GH_TOKEN: ${{ inputs.token }}
                 GH_REPOSITORY: ${{ inputs.repository }}
                 PR_NUMBER: ${{ inputs.pullRequestNumber }}
                 BRANCH_NAME: ${{ inputs.branch }}
 
-        -   name: Set execute permissions
+        -   name: "Set execute permissions [NOTICE: This will be removed in the next major version]"
             if: ${{ !inputs.useGo }}
             shell: bash
             run: chmod +x ${{github.action_path}}/entrypoint.sh
 
-        -   name: Format Pull Request Title
+        -   name: "Format Pull Request Title (Legacy) [NOTICE: This will be removed in the next major version]"
             if: ${{ !inputs.useGo }}
             shell: bash
             run: ${{github.action_path}}/entrypoint.sh
