--- a/actions/php/rector/action.yml
+++ b/actions/php/rector/action.yml
@@ -17,6 +17,10 @@ inputs:
 runs:
     using: 'composite'
     steps:
+        -   name: Deprecation Warning
+            shell: bash
+            run: echo "This action is deprecated. Use the codeStyle action instead."
+
         -   uses: shivammathur/setup-php@v2
             with:
                 php-version: "${{ inputs.phpVersion }}"
