--- a/actions/github/formatPullRequestTitle/action.yml
+++ b/actions/github/formatPullRequestTitle/action.yml
@@ -37,22 +37,12 @@ runs:
                 cache: true
                 cache-dependency-path: '${{github.action_path}}/go.sum'
 
-        -   name: Restore Go Modules Cache
-            if: ${{ inputs.useGo }}
-            uses: actions/cache@v4
-            id: go-cache
-            with:
-                path: ~/go/pkg/mod
-                key: ${{ runner.os }}-go-modules-${{ hashFiles('**/go.sum') }}
-                restore-keys: |
-                    ${{ runner.os }}-go-modules-
-
         -   name: Calculate Binary Cache Key
             if: ${{ inputs.useGo }}
             id: binary-cache-key
             shell: bash
             working-directory: ${{github.action_path}}
-            run: echo "key=${{ runner.os }}-go-binary-${{ hashFiles('main.go', '**/*.go') }}" >> $GITHUB_OUTPUT
+            run: echo "${{ runner.os }}-go-binary-${{ hashFiles(format('{0}/main.go', github.action_path)) }}" >> $GITHUB_OUTPUT
 
         -   name: Restore Binary Cache
             if: ${{ inputs.useGo }}
@@ -60,20 +50,13 @@ runs:
             id: binary-cache
             with:
                 path: ${{github.action_path}}/action-binary
-                key: ${{ steps.binary-cache-key.outputs.key }}
+                key: ${{ runner.os }}-go-binary-${{ hashFiles(format('{0}/main.go', github.action_path)) }}
 
         -   name: Tidy Go Modules
             if: ${{ inputs.useGo }}
             shell: bash
             working-directory: ${{github.action_path}}
             run: go mod tidy
-
-        -   name: Save Go Modules Cache
-            if: ${{ inputs.useGo && steps.go-cache.outputs.cache-hit != 'true' }}
-            uses: actions/cache@v4
-            with:
-                path: ~/go/pkg/mod
-                key: ${{ runner.os }}-go-modules-${{ hashFiles('**/go.sum') }}
 
         -   name: Build Binary
             if: ${{ inputs.useGo && steps.binary-cache.outputs.cache-hit != 'true' }}
