--- a/.github/workflows/go_staticAnalysis.yml
+++ b/.github/workflows/go_staticAnalysis.yml
@@ -11,6 +11,14 @@ on:
                 type: string
                 required: false
                 default: "1.24"
+            timeout:
+                type: string
+                required: false
+                default: '1m'
+            onlyNew:
+                type: boolean
+                required: false
+                default: false
 
 jobs:
     StaticAnalysis:
@@ -27,3 +35,6 @@ jobs:
 
             -   name: Run golangci-lint
                 uses: golangci/golangci-lint-action@v6
+                with:
+                    only-new-issues: ${{ inputs.onlyNew }}
+                    args: --timeout=${{ inputs.timeout }}
